# Cymantic-Seal

./: .dockerignore  .gitignore  Dockerfile  README.md  business_plan.txt  pyproject.toml  requirements.txt
api/: app.py  database.py
cli/: main.py
cymatic_seal/: __init__.py
cymatic_seal/adversarial/: __init__.py  engine.py
cymatic_seal/audio/: __init__.py  io.py
cymatic_seal/psychoacoustics/: __init__.py  masking.py
cymatic_seal/seal/: __init__.py  certificate.py  pipeline.py
cymatic_seal/verify/: __init__.py  verifier.py
frontend/static/: style.css
frontend/templates/: batch.html  for-platforms.html  history.html  index.html  verify.html
tests/: test_adversarial.py  test_audio.py  test_certificate.py  test_integration.py  test_psychoacoustics.py
