[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cymatic-seal"
version = "0.1.0"
description = "Adversarial audio protection — make your music un-trainable by AI."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "soundfile>=0.12",
    "torch>=2.1",
    "demucs>=4.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[project.scripts]
cymatic-seal = "cli.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
